Alex Corrections/Suggestions

--- a/Data/Mirolda/Data/VF3/TODO.txt
+++ b/Data/Mirolda/Data/VF3/TODO.txt
@@ -3,6 +3,7 @@ A FAIRE sur le gouffre VF3 :
 - VF3 :
 	* Raccorder les petits bouts de topo
 	* Vérifier les raccord, il y a des erreurs
+	# Raccorder le dossier Hongroise
 
 - Falaise :
 	* Vérifier quand même si la jonction avec VF3 est correcte !
