Corrections Plan Mirolda

--- a/Data/Mirolda/Data/VF3/TODO.txt
+++ b/Data/Mirolda/Data/VF3/TODO.txt
@@ -1,7 +1,6 @@
 A FAIRE sur le gouffre VF3 :
-
-- Trouver comment faire les coupe développées du VF3 et F126
-- Dessiner coupes développées
+	- trouver qui est Didier XXX dans le réseau Danton
+	- Dessiner coupes développées
 
 Done :
 	- Intégration de toutes les données Ursus du VF3 (02/2023)
@@ -11,4 +10,6 @@ Done :
 	- Intégration VF45 --> OK (04/2023)
 	- Intégration VF46 --> OK ? (04/2023)
 	- Dessin du plan des VF3-F126-Jockers (04/2023)
+	- Trouver comment faire les coupes développées du VF3 et F126 (04/2023)
+	- Pour VF 45 : série 34 station 6 pour VF45, raccord topo en fin de série, je confirme. (04/2023)
 	-
