--- a/Data/Mirolda/Data/VF3/TODO.txt
+++ b/Data/Mirolda/Data/VF3/TODO.txt
@@ -1,5 +1,4 @@
 A FAIRE sur le gouffre VF3 :
-	- trouver qui est Didier XXX dans le réseau Danton
 	- Dessiner coupes développées
 
 Done :
@@ -12,4 +11,5 @@ Done :
 	- Dessin du plan des VF3-F126-Jockers (04/2023)
 	- Trouver comment faire les coupes développées du VF3 et F126 (04/2023)
 	- Pour VF 45 : série 34 station 6 pour VF45, raccord topo en fin de série, je confirme. (04/2023)
+	- trouver qui est Didier XXX dans le réseau Danton (04/2023)
 	-
