--- a/Data/Mirolda/Data/VF3/TODO.txt
+++ b/Data/Mirolda/Data/VF3/TODO.txt
@@ -1,5 +1,7 @@
 A FAIRE sur le gouffre VF3 :
 	- Dessiner coupes développées
+	- Verifier les coords x-y des VF3 - Jockers - F126 (Boucles en Z a peu près OK, décalages en x-y)
+	- MOdifier les coordonnées dans les Headers (mettre le fichier en amont, et appeler les variables en aval !)
 
 Done :
 	- Intégration de toutes les données Ursus du VF3 (02/2023)
