Mise à jour coordonnées dans Headers

--- a/Data/Mirolda/Data/VF3/TODO.txt
+++ b/Data/Mirolda/Data/VF3/TODO.txt
@@ -1,5 +1,4 @@
 A FAIRE sur le gouffre VF3 :
-	- Dessiner coupes développées
 	- Verifier les coords x-y des VF3 - Jockers - F126 (Boucles en Z a peu près OK, décalages en x-y)
 	- MOdifier les coordonnées dans les Headers (mettre le fichier en amont, et appeler les variables en aval !)
 
@@ -14,4 +13,5 @@ Done :
 	- Trouver comment faire les coupes développées du VF3 et F126 (04/2023)
 	- Pour VF 45 : série 34 station 6 pour VF45, raccord topo en fin de série, je confirme. (04/2023)
 	- trouver qui est Didier XXX dans le réseau Danton (04/2023)
+	- Dessiner coupes développées (04/2023)
 	-
